k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: postgres:latest
        #envFrom:
        #  - configMapRef:
        #      name: database-config
        #  - secretRef:
        #      name: database-secret
        ports:
        - containerPort: 5432
